2009-10-13  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncp.h, common/nwamui_ncp.c: 
	  Add two functions - nwamui_ncp_freeze_notify_ncus and 
	  nwamui_ncp_thaw_notify_ncus to freeze and thaw the notifications on
	  an ncu. 
	* capplet/nwam_conn_stat_panel.c: 
	  In refresh() we need to freeze notify signals on the ncus while
	  doing a refilter, otherwise we seem to end up with duplicate entries
	  in the view, eventhough the model is unchanged (GKT+ Bug?)
	  Fixes defect#11910.
	* common/nwamui_prof.c: 
	  Remove accidently duplicated property we're attempting to add twice.

2009-10-13  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_prof.h, common/nwamui_prof.c: 
	  Fix issue where a set prefernce (e.g. via gconftool-2) was caused a
	  busy loop in notifications since we set the pref again in the
	  notify!  Add preferences to allow the toggling of the type of
	  notifications that a user would like to see, or not.  Remove old
	  netstatus active i/f mechanism..
	* daemon/notify.c: 
	  Use new preferences for notifications.
	* data/nwam-manager.schemas.in:
	  Add new preferences to schema, and remove old netstatus active i/f
	  mechanism..

2009-10-12  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.92.1 for RC2 respin to fix crash if no wlans present.
	* common/nwamui_daemon.c:
	  Fix bug in nwamui_daemon_find_fav_wifi_net_by_name() which could
	  cause a crash due to invalid %s refs.
	* common/nwamui_ncu.c: 
	  Make an NCU that's waiting for address be seen as active - stops the
	  icon from switching to wired if wireless is waiting.
	* daemon/status_icon.c: 
	  Add back wired disconnect message, as per defect#10944.

2009-10-12  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_wireless_chooser.c:
	  Fix monit nit, where wireless chooser dialog was re-orderable, when
	  infact it's not.
	* nwam_core/usr/include/inetcfg.h:
	  Update to latest from ON.

2009-10-09  Darren Kenny  <darren.kenny@sun.com>
